Increased box size - gives a little bit more white space, and prevents ones with extra text from spilling over.

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .box {
-    height: 300px;
+    height: 330px;
     padding: 8px;
 }
 
